<resources>
    <string name="app_name">ProyectoFinal</string>

    <string name="emailogin">Correo electronico</string>

    <string name="pass">Contraseña</string>
    <string name="iniciarsesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="Logo">Foto del logo</string>

    <!--Registrase -->
    <string name="pass2">Repita su contraseña</string>
    <string name="btnregistrarse">Registrarte</string>
    <string name="VolverLogin">Volver al login</string>
    <!--Opciones del menu Overflow -->
    <string name="menuPrincipal">Menu principal</string>
    <string name="chat">Chat</string>
    <string name="perfil">Perfil</string>

    <!--Botones de busca y compartir -->
    <string name="buscar">Buscar</string>
    <string name="compartir">Compartir</string>

    <!-- ListView -->
    <string name="menuContextual">Editar tus datos de perfil.</string>

    <!--Perfil -->
    <string name="cambiarFotoPerfil">Seleccione una foto para su perfil.</string>
    <string name="Volver">Volver a principal</string>
    <string name="nombrePerfil">Nombre de usuario</string>
    <string name="nombrePerfil2">Ruben.Lara_24</string>
    <string name="telefono">Telefono</string>
    <string name="numeroTelefono">658431297</string>
    <string name="email">Email</string>
    <string name="emailUsuario">ruben@ruben.crack</string>
    <string name="trabajo">Trabajo usuario</string>
    <string name="trabajousuario">programador</string>
    <string name="editarCaracteristicasUsu">Edite sus datos.</string>
    <!--Barra de busqueda -->
    <string name="barraBusqueda">Buscar usuarios...</string>
    <!--Variables de maps -->
    <string name="title_activity_maps_empresa">Mapa</string>

    <!-- publicaciones-->
    <string name="texto">Texto</string>
    <!--Strings para el menu contextual -->
    <string name="opcion1">Copiar texto</string>
    <string name="opcion2">Borrar texto</string>

    <!--Pop-up -->
    <string name="puesto">Puesto</string>
    <string name="enviar">Enviar</string>

    <!--Strings para toast -->
    <string name="anadirPublicacion">El campo texto debe estar lleno</string>
    <string name="camposNoVacios">Todos los campos deben estar llenos.</string>
    <string name="campoIguales">Las contraseñas deben ser iguales.</string>
    <string name="contrasenaCaracteres">La contraseña tiene que tener minimo 9 caracteres.</string>
    <string name="terminos">Debes aceptar los terminos de uso. Recuerda que tus publicaciones pueden ser usadas para el aprendizaje.</string>
    <string name="usuarioCreado">Usuario creado con exito.</string>
    <string name="falloAutenticaion">Fallo en la autenticacion. Vuelva a intentarlo.</string>
    <string name="accesoRegistro">Bienvenid@ a la mejor red social del mundo.</string>
    <string name="notificaiones">Esta es tu primera notificacion WACHINNN!!!!!.</string>
    <string name="notificaiones2">Cambia lo que quieras de tu perfil, no te cortes.</string>
    <string name="anadirPublicaciones">Publicacion insertada con exito.</string>
    <string name="errorPublicaciones">No se pudo crear la publicacion.</string>
    <string name="errorConexion">Error de conexion.</string>
    <string name="inicioSesionCorrecto">Inicio de sesion correcto.</string>
    <string name="musicaActiva">Musica activa.</string>
    <string name="musicaDesactiva">Musica desactivada.</string>
    <string name="errorCargarImagen">Error al cargar imagen.</string>
    <string name="falloActualizacion">Fallo en la actualizacion.</string>
    <string name="falloAlCargarDatos">Fallo al cargar datos.</string>
    <string name="usuarioActualizadoExito">Los datos fueron actualizados con exito.</string>
    <string name="copiarTexto">Copiar texto.</string>
    <string name="necesitasPermisos">Necesitas activar los permisos.</string>
    <string name="noGracias">No gracias.</string>
    <string name="volverIntentar">Volver a intentar.</string>
    <string name="eligeOpcion">Elige una opcion.</string>
    <string name="lista">Publicaciones</string>

</resources>